--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "axios": "^0.22.0",
     "chart.js": "^3.5.1",
     "country-state-city": "^3.0.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.5",
     "react-dom": "^17.0.2",
@@ -23,12 +25,11 @@
     "react-multi-carousel": "^2.6.5",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-stripe-checkout": "^2.6.3",
     "react-table": "^7.7.0",
     "react-toastify": "^8.0.3",
     "redux": "^4.1.1",
-    "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^1.1.2"
   },
